--- a/src/views/static/index.ejs
+++ b/src/views/static/index.ejs
@@ -32,6 +32,7 @@
           <h1 class="display-3">Welcome to Bloccit</h1>
           <p class="lead">An application for users to share information.</p>
           <a href="#" class="btn btn-primary btn-lg">Sign up</a>
+          <h2 class="about-us">About Us</h2>
         </header>
 
         <!-- Page Features -->
