--- a/src/views/static/index.ejs
+++ b/src/views/static/index.ejs
@@ -1,28 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <% include ./partials/navbar.ejs %>
+ <% include ./partials/head.ejs %>
   </head>
   <body>
 
       <!-- Navigation -->
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-        <div class="container">
-          <a class="navbar-brand" href="#">Bloccit</a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ml-auto">
-              <li class="nav-item">
-                <a class="nav-link" href="#">Home
-                  <span class="sr-only">(current)</span>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+     <% include ./partials/navbar.ejs %>
 
       <!-- Page Content -->
       <main class="container">
@@ -32,7 +16,7 @@
           <h1 class="display-3">Welcome to Bloccit</h1>
           <p class="lead">An application for users to share information.</p>
           <a href="#" class="btn btn-primary btn-lg">Sign up</a>
-          <h2 class="about-us">About Us</h2>
+          <a href="#" class="btn btn-primary btn-lg">About Us</a>
         </header>
 
         <!-- Page Features -->
@@ -59,9 +43,6 @@
       </main>
       <!-- /.container -->
 
-      <script
-         <% include ./partials/baseScripts.ejs %>
-      </script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+     <% include ./partials/baseScripts.ejs %>
     </body>
 </html>
