--- a/src/views/static/index.ejs
+++ b/src/views/static/index.ejs
@@ -64,7 +64,10 @@
                      <a class="nav-link" href="/users/sign_in">Sign in</a>
                    </li>
                  <% }%>
-            
+                  <ul class="dropdown-menu">
+                    <li><a href="components.html" class="external">Components</a></li>
+                    <li><a href="icons.html" class="external">Icons</a></li>
+                  </ul>
                 </li>
               </ul>
             </nav>
