--- a/src/assets/css/application.css
+++ b/src/assets/css/application.css
@@ -1,3 +1,8 @@
 body {
   padding-top: 54px;
 }
+@media only screen and (max-width:480px){
+        .responsive-menus.responsified.responsive-toggled.absolute .responsive-menus-simple {
+        position: relative;
+    }
+}
