--- a/src/views/static/partials/navbar.ejs
+++ b/src/views/static/partials/navbar.ejs
@@ -6,19 +6,19 @@
 
 
 
-
+    <% if(currentUser) { %>
     <li class="nav-item">
       <a class="nav-link" href="/users/sign_out">Sign out</a>
       <li><a href="/messages">Messages</a></li>
     </li>
-
+  <% } else { %>
   <!-- #2 -->
 
     <li class="nav-item">
       <a class="nav-link" href="/users/sign_in">Sign in</a>
         <a class="nav-link" href="/users/sign_up">Sign up</a>
     </li>
-
+  <% }%>
 
 
   </ul>
