--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -12,7 +12,9 @@ body {
   color: #666666;
   font-family: "Open Sans", sans-serif;
 }
-
+main {
+  padding-top: 90px;
+}
 a {
   color: #2dc997;
 }
@@ -90,7 +92,8 @@ h1, h2, h3, h4, h5, h6 {
   right: 0;
   transition: all 0.5s;
   z-index: 997;
-  
+  background-color: #007bff;
+
 }
 
 #header #logo {
