--- a/src/views/posts/show.ejs
+++ b/src/views/posts/show.ejs
@@ -1,13 +1,73 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <% include ../static/partials/head.ejs %>
+    <head>
+      <meta charset="utf-8">
+      <title>Lost Coast Web Development</title>
+      <meta content="width=device-width, initial-scale=1.0" name="viewport">
+      <meta content="" name="keywords">
+      <meta content="" name="description">
+
+      <!-- Favicons -->
+      <link href="img/favicon.png" rel="icon">
+      <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
+
+      <!-- Google Fonts -->
+      <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Poppins:300,400,500,700" rel="stylesheet">
+
+      <!-- Bootstrap CSS File -->
+      <link href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+      <!-- Libraries CSS Files -->
+      <link href="/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+      <link href="/lib/animate/animate.min.css" rel="stylesheet">
+
+      <!-- Main Stylesheet File -->
+      <link href="/css/style.css" rel="stylesheet">
+
+
+    </head>
   </head>
   <body>
-    <% include ../static/partials/navbar.ejs %>
+
+    <header id="header">
+      <div class="container">
+        <nav id="nav-menu-container">
+          <ul class="nav-menu">
+            <li class="menu-active"><a href="/">Home</a></li>
+            <li><a href="/topics">Topics</a></li>
+
+
+
+
+            <% if(currentUser) { %>
+            <li class="nav-item">
+              <a class="nav-link" href="/users/sign_out">Sign out</a>
+
+            </li>
+          <% } else { %>
+          <!-- #2 -->
+
+            <li class="nav-item">
+              <a class="nav-link" href="/users/sign_in">Sign in</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/users/sign_up">Sign up</a>
+            </li>
+          <% }%>
+
+
+          </ul>
+        </nav>
+
+    <% include ../static/partials/messages.ejs %>
+      </div>
+    </header><!-- #header -->
+
+
 
     <main class="container">
-      <% include ../static/partials/messages.ejs %>
+
       <div style="display: flex; align-items:center;">
         <% if(currentUser) { %>
           <% include ../votes/voting.ejs %>
@@ -47,7 +107,21 @@
 
     </main>
 
-    <% include ../static/partials/baseScripts.ejs %>
+    <script src="/lib/jquery/jquery.min.js"></script>
+    <script src="/lib/jquery/jquery-migrate.min.js"></script>
+    <script src="/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="/lib/easing/easing.min.js"></script>
+    <script src="/lib/wow/wow.min.js"></script>
+    <script src="/lib/waypoints/waypoints.min.js"></script>
+    <script src="/lib/counterup/counterup.min.js"></script>
+    <script src="/lib/superfish/hoverIntent.js"></script>
+    <script src="/lib/superfish/superfish.min.js"></script>
+
+    <!-- Contact Form JavaScript File -->
+    <script src="/contactform/contactform.js"></script>
+
+    <!-- Template Main Javascript File -->
+    <script src="/js/main.js"></script>
 
   </body>
 </html>
