--- a/src/views/users/sign_in.ejs
+++ b/src/views/users/sign_in.ejs
@@ -30,33 +30,36 @@
   </head>
   <body>
 
-    <nav id="nav-menu-container">
-      <ul class="nav-menu">
-        <li class="menu-active"><a href="/">Home</a></li>
-        <li><a href="/topics">Topics</a></li>
+    <header id="header">
+      <div class="container">
+
+        <nav id="nav-menu-container">
+          <ul class="nav-menu">
+            <li class="menu-active"><a href="/">Home</a></li>
+            <li><a href="/topics">Topics</a></li>
 
 
 
 
-        <% if(currentUser) { %>
-        <li class="nav-item">
-          <a class="nav-link" href="/users/sign_out">Sign out</a>
+            <% if(currentUser) { %>
+            <li class="nav-item">
+              <a class="nav-link" href="/users/sign_out">Sign out</a>
 
-        </li>
-      <% } else { %>
-      <!-- #2 -->
+            </li>
+          <% } else { %>
+          <!-- #2 -->
 
-        <li class="nav-item">
-          <a class="nav-link" href="/users/sign_in">Sign in</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/users/sign_up">Sign up</a>
-        </li>
-      <% }%>
+            <li class="nav-item">
+              <a class="nav-link" href="/users/sign_in">Sign in</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/users/sign_up">Sign up</a>
+            </li>
+          <% }%>
 
 
-      </ul>
-    </nav>
+          </ul>
+        </nav>
 
     <% include ../static/partials/messages.ejs %>
       </div>
